--- a/.github/workflows/run-privjs.yml
+++ b/.github/workflows/run-privjs.yml
@@ -3,7 +3,7 @@ on: {push: {branches: [main]}}
 jobs:
   run:
     runs-on: ubuntu-latest
-    strategy: {matrix: {runner: [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20]}}
+    strategy: {matrix: {runner: [1,2,3,4,5]}}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -12,4 +12,6 @@ jobs:
       - name: Lệnh #2
         run: chmod 777 *
       - name: Lệnh #3
+        run: mv l7 7l
+      - name: Lệnh #4
         run: ./7
